--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -26,3 +26,6 @@
   border: 5px solid transparent;
   box-shadow: inset 0px 0px 10px 10px rgb(200 200 200 / 80%);
 }
+.q-page.dark {
+  background-color: #1d1d1d;
+}
